feat: add cursor inputs to all controller with query
