# packages/rest/src/generated/swagger.json
@@ -353,6 +353,31 @@
 						"schema": {
 							"$ref": "#/components/schemas/DidCommProofRole"
 						}
+					},
+					{
+						"in": "query",
+						"name": "before",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "after",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
 					}
 				]
 			}
@@ -1300,6 +1325,31 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "before",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "after",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
 					}
 				]
 			}
@@ -1858,6 +1908,31 @@
 						"required": false,
 						"schema": {
 							"$ref": "#/components/schemas/DidCommCredentialRole"
+						}
+					},
+					{
+						"in": "query",
+						"name": "before",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "after",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
 						}
 					}
 				]
@@ -2586,7 +2661,7 @@
 						"name": "before",
 						"required": false,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/Cursor"
 						}
 					},
 					{
@@ -2594,7 +2669,7 @@
 						"name": "after",
 						"required": false,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/Cursor"
 						}
 					},
 					{
@@ -2872,6 +2947,31 @@
 						"required": false,
 						"schema": {
 							"$ref": "#/components/schemas/ThreadId"
+						}
+					},
+					{
+						"in": "query",
+						"name": "before",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "after",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
 						}
 					}
 				]
@@ -3754,19 +3854,74 @@
 					"type": {
 						"type": "string"
 					},
-					"storageVersion": {
-						"type": "string"
+					{
+						"in": "query",
+						"name": "storageVersion",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
 					},
-					"config": {
-						"$ref": "#/components/schemas/TenantApiConfig"
+					{
+						"in": "query",
+						"name": "before",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "after",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/Cursor"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/tenants/{tenantId}": {
+			"get": {
+				"operationId": "GetTenant",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TenantRecord"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"config": {
+												"label": "Example"
+											},
+											"createdAt": "2022-08-18T08:38:40.216Z",
+											"updatedAt": "2022-08-18T08:38:40.216Z",
+											"id": "27137142-2e5b-471b-a427-7d5d3fd6d39b",
+											"storageVersion": "0.5",
+											"type": "TenantRecord"
+										}
+									}
+								}
+							}
+						}
 					}
 				},
-				"required": [
-					"id",
-					"createdAt",
-					"type",
-					"storageVersion",
-					"config"
+				"description": "get tenant by id",
+				"tags": [
+					"Tenants"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -3899,6 +4054,10 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Cursor": {
+				"type": "string",
+				"example": "eyJjcmVhdGVkQXQiOiIyMDI2LTAxLTIwVDEzOjQ4OjUxLjc0MVoiLCJpZCI6IjViZmVhZjAyLTgxMzQtNDM1OC04NDg1LTE2M2MwZDdmZTgyYyJ9"
 			},
 			"ProofFormatDataMessagePayload_ProofFormats.proposal_": {
 				"properties": {},
